k8s/flask-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-app-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: flask
  ports:
    - port: 5000
      targetPort: 5000
