k8s/flask-app-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'

spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: flask-app-cluster-ip-service
              servicePort: 5000
